--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
       </canvas> -->
 
       <div style="display: block">
-        <canvas baseChart #mylinechart
+        <canvas baseChart #myChart
                 [chartType]="chartType"
                 [datasets]="chartDatasets"
                 [labels]="chartLabels"
