--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,20 @@
 
 
 <div class="content" role="main">
+
+  Test Application
+
+  <h2>Parent component</h2>
+
+  Employee Name: <input [(ngModel)]="employeeName" type= text>
+
+  Employee Address : {{employeeAddress}}
+
+<app-add-employee [employeeName]="employeeName" (connect)="onConnect($event)"></app-add-employee>
+
+
   <!-- Highlight Card -->
-  <div class="card highlight-card card-small">
+  <!-- <div class="card highlight-card card-small">
 
     <div class="chartWrapper">
       <div class="chartAreaWrapper">
@@ -14,7 +26,7 @@
     
       </div>
     </div>
-  
+   -->
 
     <div style="display: block">
       <!-- <canvas mdbChart
@@ -62,7 +74,7 @@
     @Output chartClick
    -->
   </div>
-
+<!-- 
   <form [formGroup]="_employeeFormGroup">
 
     <div class="row">
@@ -106,12 +118,12 @@
       <div class="col-md-3"></div>
       <div class="col-md-6 form-group">
         <button [disabled]="!_employeeFormGroup.valid" class="btn btn-success">Save</button>
-        <button  class="btn btn-warning" [routerLink]="['/']">Back</button>
+        <button  class="btn btn-warning">Back</button>
       </div>
     </div>
 
 
-  </form>
+  </form> -->
 
   <style>
 .chartWrapper {
