Material Module mat card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 
 
-<div class="content" role="main">
+<app-mat-card-example></app-mat-card-example>
+
+<!-- <div class="content" role="main">
 
   Test Application
 
@@ -10,7 +12,10 @@
 
   Employee Address : {{employeeAddress}}
 
-<app-add-employee [employeeName]="employeeName" (connect)="onConnect($event)"></app-add-employee>
+  <app-add-department></app-add-department>
+  
+<app-add-employee [employeeName]="employeeName" (connect)="onConnect($event)"></app-add-employee> -->
+
 
 
   <!-- Highlight Card -->
@@ -28,7 +33,7 @@
     </div>
    -->
 
-    <div style="display: block">
+    <!-- <div style="display: block"> -->
       <!-- <canvas mdbChart
           [chartType]="chartType"
           [datasets]="chartDatasets" 
@@ -55,7 +60,7 @@
 
       <!-- Testing Excel -->
 
-     </div>
+     <!-- </div> -->
                               
   
   <!-- 
@@ -73,7 +78,7 @@
     @Output chartHover
     @Output chartClick
    -->
-  </div>
+  
 <!-- 
   <form [formGroup]="_employeeFormGroup">
 
