--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 
 
-<app-mat-card-example></app-mat-card-example>
+<!-- <app-mat-card-example></app-mat-card-example> -->
+
+<app-aws-enablers></app-aws-enablers>
 
 <!-- <div class="content" role="main">
 
