--- a/src/app/aws-enablers/aws-enablers.component.html
+++ b/src/app/aws-enablers/aws-enablers.component.html
@@ -1,4 +1,11 @@
-<div>
+
+
+
+
+
+<button class="btn btn-success" (click)="openPopUp()">Open PopUp</button>
+
+<!-- <div>
   <div class="row margin">
     <div class="col-md-6" *ngFor="let aws of awsEnablers">
       <div class="row">
@@ -34,4 +41,4 @@
   .margin {
     margin: 10px;
   }
-</style>
+</style> -->
